* class customURLProfileStore | bugfix if XMLnode 'list' is not available
* class IPsecTunnel | bugfix NOT create XML node 'proxy-id-v6' if not avai…
* UTIL | bugfix to get argument 'apitimeout=XYZ' into working mode
* UTIL | reinitiate class PH() at calling of UTIL()
* UTIL | pa_rule-edit actions=exportToExcel - related to class Schedule() introduce in the past

2.0.4 (20210519)
UTILS:
* pa-address/service/tag/schedule-edit introduce argument loadpanoramapushedconfig to display local and panorama pushed objects


2.0.3 (20210517)
BUGFIX:
* bugfix for pa_addressgroup-merger and pa_service-merger


2.0.2
UTILS:
* pa-address/service/tag/schedule-edit introduce argument loadpanoramapushedconfig to display local and panorama pushed objects

BUGFIX:
class SecurityProfileStore/SecurityProfileGroup - related to classes Container/DeviceCloud/PanoramaConf/PanConf/VirtualSystem/DeviceGroup - correction of SecurityProfileStore type - fix related if argument 'loadpanoramapushedconfig' was used
pa_tag-edit/pa_schedule-edit/pa_rule-edit - fix XML out file; if all objects are deleted, so that XML Node do not contain any Newline



2.0.1 (20210514)
GENERAL:
* introduce again travis for automatic unit testing

UTILS:
pa_address-edit - new 'filter=(value is.included-in.name)' | to check if object value is part of object name
pa_address-edit - new 'filter=(value is.in.file FILENAME)'
address-edit - new actions=value-set-reverse-dns
address-edit - new actions=value-set-ip-for-fqdn
XYZ-merger | update functionality 'allowmergingwithupperlevel' - complete DG hierarchy is now checked & if Panorama DG has two/more childDG these childDG are checked and if duplicate objects are there, objects are merged into parentDG
address-merger | merge TAG before duplicate object is deleted
schedule-edit | introduce new util tool, introduce 'filter=(object is.expired)'